--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 4_l_iteration/4.7_somme_des_chiffres
 4_l_iteration/4.8_couchsurfing
 5_appel_de_fonctions/5.2_somme_des_chiffres_est_premier/main
+5_appel_de_fonctions/5.2_somme_des_chiffres_est_premier/utils.o
 5_appel_de_fonctions/5.3_somme_des_lettres_des_prenoms/main
+5_appel_de_fonctions/5.3_somme_des_lettres_des_prenoms/compatibilite.o
 5_appel_de_fonctions/5.4_multiples_de/main
+5_appel_de_fonctions/5.4_multiples_de/premier.o
 5_appel_de_fonctions/5.5_facteurs_premiers
