--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 5_appel_de_fonctions/5.4_multiples_de/main
 5_appel_de_fonctions/5.4_multiples_de/premier.o
 5_appel_de_fonctions/5.5_facteurs_premiers
+6_ecrire_des_fonctions/6.2_etoiles
+6_ecrire_des_fonctions/6.3_factoriser
+6_ecrire_des_fonctions/6.4_nombres_amicaux
+6_ecrire_des_fonctions/6.5_fibonacci
+6_ecrire_des_fonctions/6.6_nombres_sublimes
