--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@
 6_ecrire_des_fonctions/6.4_nombres_amicaux
 6_ecrire_des_fonctions/6.5_fibonacci
 6_ecrire_des_fonctions/6.6_nombres_sublimes
+7_tableaux/7.2_restaurant_chinois
+7_tableaux/7.3_chiffrement
+7_tableaux/7.4_bugs_dans_le_traitement_de_mots
+7_tableaux/7.5_sequence_de_nombres
+7_tableaux/7.6_les_sanglots_longs
+7_tableaux/7.7_pendu
