--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@
 7_tableaux/7.5_sequence_de_nombres
 7_tableaux/7.6_les_sanglots_longs
 7_tableaux/7.7_pendu
+8_chaines_de_caracteres/8.2_taille_chaine_de_caracteres
+8_chaines_de_caracteres/8.3_lettres_communes
+8_chaines_de_caracteres/8.4_retourner_une_chaine
+8_chaines_de_caracteres/8.5_extraire_voyelles_et_consonnes
+8_chaines_de_caracteres/8.6_da_love_machine
