--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@
 8_chaines_de_caracteres/8.4_retourner_une_chaine
 8_chaines_de_caracteres/8.5_extraire_voyelles_et_consonnes
 8_chaines_de_caracteres/8.6_da_love_machine
+9_structures/9.2_liste_de_clients
+9_structures/9.3_morceaux_de_musique
+9_structures/9.4_philiiiiiiiippe
